2012-06-26  Per Bothner  <per@bothner.com>

	* Location.java: Change to parameterized class.
	* NamedLocation.java: Update accordingly.
	* IndirectableLocation.java: Update accordingly.
	* PlainLocation.java: Update accordingly.
	* ProcLocation.java: Update accordingly.
	* ThreadLocation.java: Update accordingly.
	* PropertyLocation.java: Update accordingly.
	* SharedLocation.java: Update accordingly.
	* ConstrainedLocation.java: Update accordingly.

2012-05-20  Per Bothner  <per@bothner.com>

	* SimpleEnvironment.java (newLocation): Make protected.

	* NamedLocation.java: Add generic parameter to supertype.
	(getKey): Fix return type to match.

2012-01-31  Per Bothner  <per@bothner.com>

	* Lazy.java: Note that getValue is allowed to return this.
	* Promise.java (force): Handle case of getValue returning this.

2012-01-27  Per Bothner  <per@bothner.com>

	* Promise.java (isBlank): New method.
	(checkUnset): Rename to checkBlank.
	(setValue, setvalue, setException, setThnk): New methods.
	(getValue): Changes to handle new functionality.
	(print): Add overload.
	(toString): New method.

2012-01-15  Per Bothner  <per@bothner.com>

	* Promise.java: Make final, because moveFrom would be anomolous if
	source or target would be a sub-class of Promise.
	(moveFrom): New method.
	(forceValueIfPromise): New field.
	(setForceValueIfPromise): New method.
	(<init>): New default constructor.
	(setValue, setAlias, setException, setThunk): New methods.
	(getValue) Re-implement to match SRFI-45.
	(force1): New static method.

2012-01-01  Per Bothner  <per@bothner.com>

	* Lazy.java (getValue): Changed to no longer throw Throwable.
	* Future.java (getValue): Catch and maybe wrap exception.
	* Promise.java (getValue): Likewise.
	(makeBoundPromise): New static method.
	(force): Simplify.
	* WrappedException.java (rethrow): New static method.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* OutPort.java (getPrettyWriter): New getter.
	* OutPort.java: various @Override annotations.
